ajustes solicitados base

--- a/index.html
+++ b/index.html
@@ -97,27 +97,6 @@
       </nav>
     </header>
 
-    <section class="s-banner-home">
-      <div class="container">
-        <div class="content-banner-home">
-          <div class="img-banner-home">
-            <img src="./resources/assets/img/casamento-atelie.jpg" alt="" />
-          </div>
-          <div class="text-banner-home">
-            <img
-              src="./resources/assets/img/alianca-removebg-preview.png"
-              alt=""
-            />
-            <h1>O vestido perfeito para seu casamento!</h1>
-            <p>Atelie Julia Gonndenzon</p>
-            <div class="link-banner-home">
-              <a href="">Reservar visita</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="s-sobre">
       <div class="container">
         <div class="content-sobre">
@@ -147,26 +126,8 @@
               <img src="./resources/assets/img/casamento-sobre.jpg" alt="" />
             </div>
           </div>
-          <div class="box-numeros-sobre">
-            <div class="itens-numeros-sobre">
-              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
-              <p class="iten-sobre">Decorações</p>
-            </div>
-            <div class="itens-numeros-sobre">
-              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
-              <p class="iten-sobre">Decorações</p>
-            </div>
-            <div class="itens-numeros-sobre">
-              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
-              <p class="iten-sobre">Decorações</p>
-            </div>
-            <div class="itens-numeros-sobre last-itens-numeros-sobre">
-              <p class="number-sobre">568<span class="plus-sobre">+</span></p>
-              <p class="iten-sobre">Decorações</p>
-            </div>
-          </div>
           <div class="video-sobre-apresentation">
-            <strong>Apresentação</strong>
+            <!-- <strong>Apresentação</strong> -->
             <h2>Conheça mais sobre nós</h2>
             <div class="item-video-sobre">
               <video width="100%" height="400" controls>
@@ -179,7 +140,7 @@
       </div>
     </section>
 
-    <div class="divisoria-sections">
+    <div class="divisoria-sections" style="margin-top: 4rem">
       <img
         src="./resources/assets/img/coracao-flor-removebg-preview.png"
         alt=""
@@ -190,13 +151,16 @@
       <div class="container">
         <div class="content-galeria">
           <strong>Galeria</strong>
-          <h2>Conheça nossa galeria de vestidos</h2>
+          <h2>Galeria própria</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
           </div>
           <div class="link-galeria">
             <a href="">Ver Todos</a>
@@ -205,14 +169,57 @@
       </div>
     </section>
 
-    <div class="divisoria-sections2">
+    <section class="s-banner-home">
+      <div class="container">
+        <div class="content-banner-home">
+          <div class="img-banner-home">
+            <img src="./resources/assets/img/casamento-atelie.jpg" alt="" />
+          </div>
+          <div class="text-banner-home">
+            <img
+              src="./resources/assets/img/alianca-removebg-preview.png"
+              alt=""
+            />
+            <h1>O vestido perfeito para seu casamento!</h1>
+            <p>Atelie Julia Gonndenzon</p>
+            <div class="link-banner-home">
+              <a href="">Reservar visita</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="s-galeria">
+      <div class="container">
+        <div class="content-galeria">
+          <strong>Galeria</strong>
+          <h2>Galeria clientes</h2>
+          <div class="box-galeria">
+            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
+          </div>
+          <div class="link-galeria">
+            <a href="">Ver Todos</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <div class="divisoria-sections2">
       <img
         src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
         alt=""
       />
-    </div>
+    </div> -->
 
-    <section class="s-servicos">
+    <!-- <section class="s-servicos">
       <div class="container">
         <div class="content-servicos">
           <strong>Serviços</strong>
@@ -257,16 +264,16 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
+    <!-- 
     <div class="divisoria-sections2">
       <img
         src="./resources/assets/img/divisoria-wedding-removebg-preview.png"
         alt=""
       />
-    </div>
+    </div> -->
 
-    <section class="s-depoimentos">
+    <!-- <section class="s-depoimentos">
       <div class="container">
         <div class="content-depoimentos">
           <strong>Depoimentos</strong>
@@ -313,7 +320,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <div class="divisoria-sections2">
       <img
