--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="./resources/assets/styles/main.css" />
     <link rel="stylesheet" href="./resources/assets/styles/carrousel.css" />
+    <link rel="stylesheet" href="./resources/assets/styles/header-effects.css">
 
     <!--Font Awesome-->
     <link
@@ -85,19 +86,19 @@
               </div>
               <ul>
                 <li>
-                  <a href="#sobre">Sobre</a>
+                  <a href="#sobre" class="cool-link">Sobre</a>
                 </li>
                 <li>
-                  <a href="#galeria">Galeria</a>
+                  <a href="#galeria" class="cool-link">Galeria</a>
                 </li>
                 <li>
-                  <a href="#clientes">Clientes</a>
+                  <a href="#clientes" class="cool-link">Clientes</a>
                 </li>
                 <li>
-                  <a href="#contato">Contato</a>
+                  <a href="#contato" class="cool-link">Contato</a>
                 </li>
                 <li>
-                  <a href="https://www.juliagolldenzon.com.br/" target="_blank">Loja</a>
+                  <a href="https://www.juliagolldenzon.com.br/" target="_blank" class="cool-link">Loja</a>
                 </li>
               </ul>
             </div>
