--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               alt=""
             />
             <div class="social-nav-itens">
-              <p>Nos siga nas redes sociais:</p>
+              <p>Siga-nos nas redes sociais:</p>
               <a href="https://www.facebook.com/ateliejuliagolldenzon/"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
@@ -114,13 +114,9 @@
             <div class="box-left-sobre">
               <div id="sobre"></div>
               <strong>Sobre Nós</strong>
-              <h2>O casamento perfeito</h2>
+              <h2>Lorem</h2>
               <p>
-                Empresa especializada na criação de vestidos de noivas únicos e
-                deslumbrantes. Nossos designs são feitos sob medida, com atenção
-                aos detalhes e qualidade excepcional. Transformamos sonhos em
-                realidade, tornando o dia do casamento ainda mais especial e
-                memorável.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores numquam magni soluta provident laborum, dicta ea modi ut ad quae sint eaque atque doloremque excepturi voluptatum! Dignissimos provident, expedita quisquam inventore quidem aut rerum nobis eaque possimus veritatis est.
               </p>
               <div class="box-left-check-itens">
                 <i class="fa-regular fa-circle-check"></i> <span>Item 1</span>
@@ -150,12 +146,12 @@
       </div>
     </section>
 
-    <div class="divisoria-sections" style="margin-top: 4rem">
+    <!-- <div class="divisoria-sections" style="margin-top: 4rem">
       <img
         src="./resources/assets/img/coracao-flor-removebg-preview.png"
         alt=""
       />
-    </div>
+    </div> -->
 
     <div id="galeria"></div>
 
@@ -170,8 +166,6 @@
             <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
           </div>
           <div class="link-galeria">
@@ -207,16 +201,14 @@
     <section class="s-galeria">
       <div class="container">
         <div class="content-galeria">
-          <strong>Galeria</strong>
-          <h2>Galeria clientes</h2>
+          <strong>Nossas noivas</strong>
+          <h2>Nossas noivas</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
           </div>
           <div class="link-galeria">
@@ -337,12 +329,12 @@
     </section> -->
     
 
-    <div class="divisoria-sections2">
+    <!-- <div class="divisoria-sections2">
       <img
         src="./resources/assets/img/divisoria-coracao-removebg-preview.png"
         alt=""
       />
-    </div>
+    </div> -->
 
     <div id="contato"></div>
 
