--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               src="./resources/assets/img/alianca-removebg-preview.png"
               alt=""
             />
-            <h1>O vestido perfeito para seu casamento!</h1>
+            <h1>Lorem ipsum dolor sit, amet consectetur.</h1>
             <p>Atelie Julia Gonndenzon</p>
             <div class="link-banner-home">
               <a href="">Reservar visita</a>
