--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
               <strong>Sobre Nós</strong>
               <h2>Lorem</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores numquam magni soluta provident laborum, dicta ea modi ut ad quae sint eaque atque doloremque excepturi voluptatum! Dignissimos provident, expedita quisquam inventore quidem aut rerum nobis eaque possimus veritatis est.
+                O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. No primeiro encontro exploramos as possibilidades de tecidos, rendas, bordados, acabamentos, caimentos, enfim, namoramos juntas a criação do seu croqui. A partir daí as provas dão forma ao vestido e é uma troca constante que nos permite entrar no mundo da nossa cliente para entender seus desejos e deixá-las se sentirem à vontade para explorar o mundo da alta costura que amamos tanto.
               </p>
-              <div class="box-left-check-itens">
+              <!-- <div class="box-left-check-itens">
                 <i class="fa-regular fa-circle-check"></i> <span>Item 1</span>
                 <br />
                 <i class="fa-regular fa-circle-check"></i> <span>Item 2</span>
                 <br />
                 <i class="fa-regular fa-circle-check"></i> <span>Item 3</span>
-              </div>
+              </div> -->
               <div class="contato-sobre-left">
                 <a href="">Entre em contato</a>
               </div>
