--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="box-left-sobre">
               <div id="sobre"></div>
               <strong>Sobre Nós</strong>
-              <h2>Lorem</h2>
+              <h2>Noivas</h2>
               <p>
                 O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. No primeiro encontro exploramos as possibilidades de tecidos, rendas, bordados, acabamentos, caimentos, enfim, namoramos juntas a criação do seu croqui. A partir daí as provas dão forma ao vestido e é uma troca constante que nos permite entrar no mundo da nossa cliente para entender seus desejos e deixá-las se sentirem à vontade para explorar o mundo da alta costura que amamos tanto.
               </p>
@@ -125,12 +125,12 @@
                 <br />
                 <i class="fa-regular fa-circle-check"></i> <span>Item 3</span>
               </div> -->
-              <div class="contato-sobre-left">
+              <!-- <div class="contato-sobre-left">
                 <a href="">Entre em contato</a>
-              </div>
+              </div> -->
             </div>
             <div class="box-right-sobre">
-              <img src="./resources/assets/img/casamento-sobre.jpg" alt="" />
+              <img src="./resources/assets/img/img-exemplo-noiva.jpeg" alt="" />
             </div>
           </div>
           <div class="video-sobre-apresentation">
@@ -155,7 +155,7 @@
 
     <div id="galeria"></div>
 
-    <section class="s-galeria">
+    <section class="s-galeria" style="margin-top: 7rem;">
       <div class="container">
         <div class="content-galeria">
           <strong>Galeria</strong>
@@ -346,10 +346,10 @@
           <div class="box-contato">
             <div class="box-left-contato">
               <div class="form-contato">
-                <img
+                <!-- <img
                   src="./resources/assets/img/coracao-flor-removebg-preview.png"
                   alt=""
-                />
+                /> -->
                 <form action="" method="post">
                   <div class="form-row">
                     <div class="form-column">
@@ -390,7 +390,7 @@
             <div class="box-right-contato">
               <img
                 src="./resources/assets/img/logo-julia-golldenzon.webp"
-                width="150"
+                width="70"
                 alt=""
               />
               <h3>Conheça nosso Atelie</h3>
