--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div id="sobre"></div>
               <strong>Sobre Nós</strong>
               <h2>Noivas</h2>
-              <p>
+              <p style="text-align: justify;">
                 O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. No primeiro encontro exploramos as possibilidades de tecidos, rendas, bordados, acabamentos, caimentos, enfim, namoramos juntas a criação do seu croqui. A partir daí as provas dão forma ao vestido e é uma troca constante que nos permite entrar no mundo da nossa cliente para entender seus desejos e deixá-las se sentirem à vontade para explorar o mundo da alta costura que amamos tanto.
               </p>
               <!-- <div class="box-left-check-itens">
