--- a/index.html
+++ b/index.html
@@ -158,13 +158,16 @@
     <section class="s-galeria" style="margin-top: 7rem;">
       <div class="container">
         <div class="content-galeria">
-          <strong>Galeria</strong>
-          <h2>Galeria própria</h2>
+          <strong>Galeria pré-porter</strong>
+          <h2>Conheça nossa linha pré-porter</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
+            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
           </div>
