--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="container">
         <div class="content-galeria">
           <strong>Galeria pré-porter</strong>
-          <h2>Conheça nossa linha pré-porter</h2>
+          <h2>Conheça nossa linha prê-a-porter</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
@@ -182,22 +182,26 @@
       <div class="container">
         <div class="content-banner-home">
           <div class="img-banner-home">
-            <img src="./resources/assets/img/casamento-atelie.jpg" alt="" />
+            <img src="./resources/assets/img/noiva-atelie.jpeg" alt="" />
           </div>
           <div class="text-banner-home">
             <img
               src="./resources/assets/img/alianca-removebg-preview.png"
               alt=""
             />
-            <h1>Lorem ipsum dolor sit, amet consectetur.</h1>
-            <p>Atelie Julia Gonndenzon</p>
+            <h1>"TODA NOIVA É ESPECIAL"</h1>
             <div class="link-banner-home">
-              <a href="">Reservar visita</a>
+              <a href="">Agende sua visita</a>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <div class="container" style="margin-bottom: 6rem;">
+      <img src="./resources/assets/img/banner-index-bloco.jpeg" alt="">
+    </div>
+    
 
     <div id="clientes"></div>
 
