--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               src="./resources/assets/img/alianca-removebg-preview.png"
               alt=""
             />
-            <h1>"TODA NOIVA É ESPECIAL"</h1>
+            <h1>" TODA NOIVA É ESPECIAL "</h1>
             <div class="link-banner-home">
               <a href="">Agende sua visita</a>
             </div>
@@ -211,12 +211,14 @@
           <strong>Nossas noivas</strong>
           <h2>Nossas noivas</h2>
           <div class="box-galeria">
-            <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img3.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img4.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img5.jpg" alt="" />
-            <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo1.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo2.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo3.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo4.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo5.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo6.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo2.jpeg" alt="" />
+            <img src="./resources/assets/img/foto-noiva-exemplo3.jpeg" alt="" />
           </div>
           <div class="link-galeria">
             <a href="">Ver Todos</a>
@@ -395,12 +397,12 @@
               </div>
             </div>
             <div class="box-right-contato">
-              <img
+              <!-- <img
                 src="./resources/assets/img/logo-julia-golldenzon.webp"
                 width="70"
                 alt=""
-              />
-              <h3>Conheça nosso Atelie</h3>
+              /> -->
+              <h3>Visite nosso Atelie</h3>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7346.018572662678!2d-43.228759!3d-22.986686!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd5b700c0e949%3A0xa43c5fd548c630bf!2sAteli%C3%AA%20Julia%20Golldenzon!5e0!3m2!1spt-BR!2sbr!4v1683660153472!5m2!1spt-BR!2sbr"
                 width="500"
