--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section class="s-galeria" style="margin-top: 7rem;">
       <div class="container">
         <div class="content-galeria">
-          <strong>Galeria pré-porter</strong>
+          <strong>Galeria prê-a-porter</strong>
           <h2>Conheça nossa linha prê-a-porter</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
