--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
               <strong>Sobre Nós</strong>
               <h2>Noivas</h2>
               <p style="text-align: justify;">
-                O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. No primeiro encontro exploramos as possibilidades de tecidos, rendas, bordados, acabamentos, caimentos, enfim, namoramos juntas a criação do seu croqui. A partir daí as provas dão forma ao vestido e é uma troca constante que nos permite entrar no mundo da nossa cliente para entender seus desejos e deixá-las se sentirem à vontade para explorar o mundo da alta costura que amamos tanto.
+                O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. 
+              </p>
+              <p style="margin-top: 1rem;">
+                No primeiro encontro exploramos as possibilidades de tecidos, rendas, bordados, acabamentos, caimentos, enfim, namoramos juntas a criação do seu croqui. A partir daí as provas dão forma ao vestido e é uma troca constante que nos permite entrar no mundo da nossa cliente para entender seus desejos e deixá-las se sentirem à vontade para explorar o mundo da alta costura que amamos tanto.
               </p>
               <!-- <div class="box-left-check-itens">
                 <i class="fa-regular fa-circle-check"></i> <span>Item 1</span>
@@ -158,8 +161,8 @@
     <section class="s-galeria" style="margin-top: 7rem;">
       <div class="container">
         <div class="content-galeria">
-          <strong>Galeria prê-a-porter</strong>
-          <h2>Conheça nossa linha prê-a-porter</h2>
+          <strong>Galeria prêt-a-porter</strong>
+          <h2>Conheça nossa linha prêt-a-porter</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/vestido-img1.jpg" alt="" />
             <img src="./resources/assets/img/vestido-img2.jpg" alt="" />
