--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
             <img src="./resources/assets/img/noiva-atelie.jpeg" alt="" />
           </div>
           <div class="text-banner-home">
-            <img
+            <!-- <img
               src="./resources/assets/img/alianca-removebg-preview.png"
               alt=""
-            />
+            /> -->
             <h1>" TODA NOIVA É ESPECIAL "</h1>
             <div class="link-banner-home">
               <a href="">Agende sua visita</a>
