--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="container">
         <div class="content-galeria">
           <strong>Nossas noivas</strong>
-          <h2>Nossas noivas</h2>
+          <h2>Conheça nossas noivas</h2>
           <div class="box-galeria">
             <img src="./resources/assets/img/foto-noiva-exemplo1.jpeg" alt="" />
             <img src="./resources/assets/img/foto-noiva-exemplo2.jpeg" alt="" />
@@ -470,9 +470,9 @@
                 />
               </a>
               <p></p>
-                <a href="https://www.juliagolldenzon.com.br/" target="_blank"
+                <!-- <a href="https://www.juliagolldenzon.com.br/" target="_blank"
                   >https://www.juliagolldenzon.com.br/</a
-                >
+                > -->
               </p>
             </div>
           </div>
