--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
               </div>
               <ul>
                 <li>
-                  <a href="#sobre" class="cool-link">Sobre</a>
+                  <a href="#sobre" class="cool-link">Noivas</a>
                 </li>
                 <li>
-                  <a href="#galeria" class="cool-link">Galeria</a>
+                  <a href="#galeria" class="cool-link">Linha prêt-a-porter</a>
                 </li>
                 <li>
-                  <a href="#clientes" class="cool-link">Clientes</a>
+                  <a href="#clientes" class="cool-link">Nossas noivas</a>
                 </li>
                 <li>
                   <a href="#contato" class="cool-link">Contato</a>
