--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="box-sobre">
             <div class="box-left-sobre">
               <div id="sobre"></div>
-              <strong>Sobre Nós</strong>
+              <strong>Noivas</strong>
               <h2>Noivas</h2>
               <p style="text-align: justify;">
                 O vestido feito sob medida é uma certeza de corresponder às suas expectativas de sentir algo especial e único, usando uma peça que veste perfeitamente a sua silhueta. O atendimento para peças exclusivas, no ateliê Julia Golldenzon, é um processo delicioso de desenvolvimento desde o momento de conhecer a nossa estilista e se identificar com ela, até ver seu sonho pronto. 
@@ -461,7 +461,7 @@
               </p>
             </div>
             <div class="itens-footer-right">
-              <strong>Conheça nossa loja online</strong>
+              <!-- <strong>Conheça nossa loja online</strong> -->
               <a href="https://www.juliagolldenzon.com.br/" target="_blank">
                 <img
                   src="./resources/assets/img/logo-julia-golldenzon.webp"
