ajustes do button cursor pointer

--- a/index.html
+++ b/index.html
@@ -217,8 +217,12 @@
       </div>
     </section>
 
-    <div class="container" style="margin-bottom: 6rem;">
+    <div id="bannerMobile" class="container" style="margin-bottom: 6rem;">
       <img src="./resources/assets/img/Reduz-2.webp" alt="">
+    </div>
+
+    <div id="bannerDesktop" class="container" style="margin-bottom: 6rem;">
+      <img src="./resources/assets/img/banner-index-bloco.jpeg" alt="">
     </div>
     
 
